# GrassGL

./: .gitignore  CMakeLists.txt  GrassGL.sln  GrassGL.vcxproj  GrassGL.vcxproj.filters  README.md  imgui.ini  vcpkg.json
assets/shaders/: shader.vert
include/: ElementBuffer.cpp  ElementBuffer.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.h  Vertices.h  camera.h  shader.h  texture.h
resources/shaders/: shader.frag  shader.vert
src/: main.cpp
